--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,15 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+/* @font-face {
+	font-family: Montserrat;
+	font-weight: normal;
+	src: url("./../fonts/Montserrat-Regular.ttf") format("ttf");
+}
+
+@font-face {
+	font-family: MontserratBold;
+	font-weight: bold;
+	src: url("./../fonts/Montserrat-Bold.ttf") format("ttf");
+} */
