--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,21 +1,10 @@
 @import "tailwindcss/base";
-@import "tailwindcss/components";
 
 @import "./components/navbar.scss";
 
+@import "tailwindcss/components";
+
 @import "tailwindcss/utilities";
-
-h1 {
-	@apply text-4xl;
-}
-
-h2 {
-	@apply text-2xl;
-}
-
-h3 {
-	@apply text-xl;
-}
 
 @font-face {
 	font-family: Montserrat;
@@ -29,6 +18,34 @@ h3 {
 	src: url("./../fonts/Montserrat-Bold.ttf") format("ttf");
 }
 
-.nuxt-content p:not(p:last-of-type) {
+html {
+	@apply font-default text-base tracking-normal;
+
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+
+	@apply text-dark;
+}
+
+h1,
+.title {
+	@apply text-3xl font-bold;
+}
+
+.subtitle {
+	@apply text-dark;
+}
+
+.nuxt-content p:not(:last-of-type) {
 	@apply pb-4;
 }
