--- a/assets/css/components/navbar.scss
+++ b/assets/css/components/navbar.scss
@@ -47,42 +47,38 @@
 }
 
 @media (max-width: 640px) {
-	.open .navLinks {
-		animation: slideDown 0.8s forwards;
+	.navbar-enter-active {
+		animation: navbarOpening 0.8s;
+	}
+	.navbar-leave-active {
+		animation: navbarClosing 0.8s;
+	}
+	@keyframes navbarOpening {
+		0% {
+			transform: translateY(-75%);
+			opacity: 0;
+		}
+		50% {
+			opacity: 0;
+		}
+		100% {
+			transform: translateY(0);
+			opacity: 1;
+		}
 	}
 
-	.closing .navLinks {
-		animation: slideUp 0.3s forwards;
-		overflow: hidden;
-	}
-
-	.navLinks {
-		display: none;
-	}
-}
-
-@keyframes slideDown {
-	0% {
-		transform: translateY(-50%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateY(0);
-		opacity: 1;
-	}
-}
-
-@keyframes slideUp {
-	0% {
-		transform: translateY(0);
-		opacity: 1;
-	}
-	50% {
-		opacity: 0;
-	}
-	100% {
-		transform: translateY(-100%);
-		opacity: 0;
+	@keyframes navbarClosing {
+		0% {
+			transform: translateY(0);
+			opacity: 1;
+		}
+		50% {
+			opacity: 0;
+		}
+		100% {
+			transform: translateY(-75%);
+			opacity: 0;
+		}
 	}
 }
 
