make texts component with dynamic class

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -49,3 +49,12 @@ h1,
 .nuxt-content p:not(:last-of-type) {
 	@apply pb-4;
 }
+
+.dark {
+	@apply bg-dark;
+}
+
+.dark .nuxt-content h1,
+.dark .nuxt-content p {
+	@apply text-primary;
+}
