--- a/assets/css/components/navbar.scss
+++ b/assets/css/components/navbar.scss
@@ -46,9 +46,44 @@
 	transition: all 1s ease;
 }
 
+nav .nuxt-link-exact-active {
+	@apply font-bold;
+}
+
+.navLink::after {
+	content: "";
+	width: 0;
+	transition: width 0.5s;
+	height: 5px;
+	position: absolute;
+	display: block;
+	bottom: 0px;
+	border-radius: 15px;
+	background-color: #fbdab4;
+}
+
+.navLink:hover::after {
+	content: "";
+	transition: width 0.5s;
+	width: 100%;
+	height: 5px;
+	position: absolute;
+	display: block;
+	bottom: 0px;
+	border-radius: 15px;
+	background-color: #fbdab4;
+}
+
 @media (min-width: 640px) {
-	nav .nuxt-link-exact-active {
-		box-shadow: 0px 5px 0px 0px rgba(251, 218, 180, 1);
+	.navLink.nuxt-link-exact-active::after {
+		content: "";
+		width: 100%;
+		height: 5px;
+		position: absolute;
+		display: block;
+		bottom: 0px;
+		border-radius: 15px;
+		background-color: #fbdab4;
 	}
 
 	nav .company {
