--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,3 @@
-@import "bootstrap/scss/bootstrap.scss";
-@import "bootstrap-vue/src/index.scss";
-
-@import "./components/navbar.scss";
-
 @font-face {
 	font-family: Montserrat;
 	font-weight: normal;
@@ -15,9 +10,22 @@
 	src: url("./../fonts/Montserrat-Bold.ttf") format("ttf");
 }
 
-html {
-	@apply font-default text-base tracking-normal;
+$primary: #339a68;
+$secondary: #29724f;
+$light: #fbdab4;
+$dark: #3c3737;
 
+$font-family-base: "Montserrat", "Source Sans Pro", system-ui, -apple-system,
+	BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+	sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+	"Noto Color Emoji";
+
+@import "bootstrap/scss/bootstrap.scss";
+@import "bootstrap-vue/src/index.scss";
+
+@import "./components/navbar.scss";
+
+html {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	-moz-osx-font-smoothing: grayscale;
@@ -30,28 +38,4 @@ html {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-
-	@apply text-dark;
-}
-
-h1,
-.title {
-	@apply text-3xl font-bold;
-}
-
-.subtitle {
-	@apply text-dark;
-}
-
-.nuxt-content p:not(:last-of-type) {
-	@apply pb-4;
-}
-
-.dark {
-	@apply bg-dark;
-}
-
-.dark .nuxt-content h1,
-.dark .nuxt-content p {
-	@apply text-light;
 }
