--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,6 +42,11 @@ html {
 	padding: 0;
 }
 
+.title {
+	font-size: 2.5rem;
+	font-weight: bold;
+}
+
 nav {
 	.navbar-brand,
 	.navbar-nav .nav-item a:hover {
@@ -68,6 +73,11 @@ nav {
 		&-icon {
 			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='%23fbdab4bf' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 		}
+	}
+
+	.dropdown-toggle.active {
+		font-weight: bold;
+		color: $light !important;
 	}
 }
 
